Fix tags and alignment of hamburger

--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -1,4 +1,4 @@
-.menu_btn {
+.menu-btn {
 	position: absolute;
 	top: 1rem;
 	right: 1rem;
@@ -59,8 +59,8 @@
 
 .btn_burger {
 	position: absolute;
-	right: 0;
-	top: 0.5rem;
+	right: 3rem;
+	top: 3rem;
 	width: 28px;
 	height: 3px;
 	background: set-text-color($primary-color);
