--- a/css/main.css
+++ b/css/main.css
@@ -8,28 +8,23 @@
   height: 100%;
   padding-top: 40vh;
   overflow: hidden;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   text-align: center;
-  background: -webkit-gradient(linear, left top, right top, from(rgba(39, 39, 39, 0.8)), to(rgba(39, 39, 39, 0.2))), url("../imgs/model-1.jpg") center top;
   background: linear-gradient(to right, rgba(39, 39, 39, 0.8), rgba(39, 39, 39, 0.2)), url("../imgs/model-1.jpg") center top;
   background-size: cover;
 }
-
 .home__name {
   font-size: 5rem;
   padding-bottom: 1rem;
   margin-top: 1rem;
   border-bottom: 2px solid #fff;
 }
-
 .home__name--last {
   color: #ff652f;
   font-weight: 700;
 }
 
-.menu_btn {
+.menu-btn {
   position: absolute;
   top: 1rem;
   right: 1rem;
@@ -37,46 +32,83 @@
   height: 20px;
   width: 20px;
   cursor: pointer;
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
+  /*
+
+   PROBLEM WHY IT DOESN't SHOW THE HAMBURGER: The &__burger nested inside the .menu_btn 
+  											class looks for a class in the index.html 
+  											file with the name of ...class="menu_btn __burger"
+  											which apparently doesn't exist.
+  											Take the whole code below outside and add it to
+  											a new class and then see the changes. Use that new class instead of
+  											menu-btn__burger in index.html
+
+  &__burger {
+  	position: absolute;
+  	right: 0;
+  	top: 0.5rem;
+  	width: 28px;
+  	height: 3px;
+  	background: set-text-color($primary-color);
+  	@include transition-ease;
+
+  	&::before {
+  		content: "";
+  		position: absolute;
+  		top: -8px;
+  		width: 28px;
+  		height: 3px;
+  		background: set-text-color($primary-color);
+  		@include transition-ease;
+  	}
+
+  	&::after {
+  		content: "";
+  		position: absolute;
+  		top: 8px;
+  		width: 20px;
+  		height: 3px;
+  		background: set-text-color($primary-color);
+  		@include transition-ease;
+  	}
+
+  	&.open {
+  		transform: rotate(720deg);
+  		background: transparent;
+  	}
+  }
+  */
 }
 
-.menu_btn__burger {
+.btn_burger {
   position: absolute;
-  right: 0;
-  top: 0.5rem;
+  right: 3rem;
+  top: 3rem;
   width: 28px;
   height: 3px;
   background: #fff;
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-
-.menu_btn__burger::before {
+.btn_burger::before {
   content: "";
   position: absolute;
   top: -8px;
   width: 28px;
   height: 3px;
   background: #fff;
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-
-.menu_btn__burger::after {
+.btn_burger::after {
   content: "";
   position: absolute;
   top: 8px;
   width: 20px;
   height: 3px;
   background: #fff;
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-
-.menu_btn__burger.open {
-  -webkit-transform: rotate(720deg);
-          transform: rotate(720deg);
+.btn_burger.open {
+  transform: rotate(720deg);
   background: transparent;
 }
 
@@ -110,19 +142,15 @@ main {
   height: 100%;
   width: 100%;
 }
-
 main .social-icons {
   position: fixed;
   left: 1rem;
   bottom: 1rem;
 }
-
 main .social-icons a {
   padding: 0.4rem;
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-
 main .social-icons a:hover {
   color: #ff652f;
 }
@@ -135,4 +163,3 @@ footer {
   padding: 1rem;
   color: #fff;
 }
-/*# sourceMappingURL=main.css.map */
